--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
+    "mongoose": "^8.1.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0"
   },
